--- a/src/main/resources/static/home/resources/stylesheets/homepage.css
+++ b/src/main/resources/static/home/resources/stylesheets/homepage.css
@@ -22,6 +22,7 @@
     cursor: pointer;
     border: none;
     background-color: #4a4a4a;
+    color: #ffffff;
 }
 
 #main > .search-container > .search-form input::placeholder {
