--- a/src/main/resources/static/home/resources/stylesheets/homepage.css
+++ b/src/main/resources/static/home/resources/stylesheets/homepage.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 #main {
     align-items: stretch;
     display: flex;
@@ -5,31 +7,69 @@
     justify-content: flex-start;
 }
 
-#main > .search-container {
+.slide {
+    overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    height: 600px;
+}
+
+.slide ul {
+    width: 300vw;
+    list-style: none;
+    font-size: 0;
+    margin-top: -300px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide ul li {
+    display: inline-block;
+}
+
+.slide button.prev {
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 5rem;
+}
+
+.slide button.next {
+    z-index: 10;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-right: 5rem;
+}
+
+.search-container {
+    white-space: nowrap;
     box-sizing: border-box;
-    padding: 1.5rem 157.5px;
+    padding: 1.5rem 410px;
     background-color: #4a4a4a;
 }
 
-#main > .search-container > .search-form {
+.search-container > .search-form {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-#main > .search-container > .search-form input {
+.search-container > .search-form input {
     cursor: pointer;
     border: none;
     background-color: #4a4a4a;
     color: #ffffff;
 }
 
-#main > .search-container > .search-form input::placeholder {
+.search-container > .search-form input::placeholder {
     color: #ffffff;
 }
 
-#main > .search-container > .search-form > .search-button {
+.search-container > .search-form > .search-button {
     padding: 0.925rem 1.5rem;
     background-color: #4a4a4a;
     color: #ffffff;
@@ -38,36 +78,36 @@
 }
 
 
-#main > .search-container > .search-form > .search-item {
+.search-container > .search-form > .search-item {
     box-sizing: border-box;
 }
 
-#main > .search-container > .search-form > .search-item > .text {
+.search-container > .search-form > .search-item > .text {
     color: #ffffff;
 }
 
 
-#main > .search-container > .search-form > .search-item:first-child > .search > .icon {
+.search-container > .search-form > .search-item:first-child > .search > .icon {
     height: 1.25rem;
     margin-bottom: 0.275rem;
 }
 
-#main > .search-container > .search-form > .search-item:nth-child(4) {
+.search-container > .search-form > .search-item:nth-child(4) {
     box-sizing: border-box;
     padding-right: 2.5rem;
 }
 
-#main > .search-container > .search-form > .search-item:nth-child(4) > .people {
+.search-container > .search-form > .search-item:nth-child(4) > .people {
     margin: 0 0.25rem;
     color: #ffffff;
 }
 
-#main > .search-container > .search-form > .search-item:nth-child(4) > .minus > .icon {
+.search-container > .search-form > .search-item:nth-child(4) > .minus > .icon {
     height: 1.125rem;
     margin-bottom: 0.25rem;
 }
 
-#main > .search-container > .search-form > .search-item:nth-child(4) > .plus > .icon {
+.search-container > .search-form > .search-item:nth-child(4) > .plus > .icon {
     height: 1.125rem;
     margin-bottom: 0.25rem;
 }
