--- a/src/main/resources/templates/hotel/find.html
+++ b/src/main/resources/templates/hotel/find.html
@@ -31,9 +31,21 @@
             </a>
         </div>
         <div class="list-container">
+
             <div class="subtitle-container">
                 <h1 class="subtitle">한국</h1>
             </div>
+            <ul class="area-container">
+                <li class="area">
+                    <span class="text">서울</span>
+                </li>
+                <li class="area">
+                    <span class="text">부산</span>
+                </li>
+                <li class="area">
+                    <span class="text">대구</span>
+                </li>
+            </ul>
         </div>
     </div>
 </main>
