--- a/src/main/resources/static/resources/stylesheets/common.css
+++ b/src/main/resources/static/resources/stylesheets/common.css
@@ -200,6 +200,15 @@ button {
     height: 7.5rem;
 }
 
+#footer > .content-container {
+    margin: auto 0;
+
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
 #footer > .content-container > .content-container-right > .icon-container {
     align-items: center;
     display: flex;
@@ -235,14 +244,6 @@ button {
     color: #706958;
     font-weight: 400;
     font-size: 0.9rem;
-}
-
-
-#footer > .content-container {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
 }
 
 #footer > .content-container > .content-container-left > .copyright {
