--- a/src/main/resources/static/hotel/resources/stylesheets/find.css
+++ b/src/main/resources/static/hotel/resources/stylesheets/find.css
@@ -4,38 +4,55 @@
 
 }
 
-.title-container > .title {
-    text-align: center;
-    margin: 4rem 0;
-}
-
-.link-container {
-    margin-bottom: 3rem;
-}
-
-.link-container > .link:first-child {
-    border-right: 0.0625rem solid #D2C4A5;
-}
-
-.link-container > .link:nth-child(2) {
-    margin-left: 1.25rem;
-}
-
-.link-container > .link > .icon {
-    height: 1.25rem;
-    margin-bottom: 0.25rem;
-}
-
-.link-container > .link > .text {
-    color: #4D473C;
-    font-size: 1.2rem;
-    padding-right: 1.25rem;
-}
-
 .list-container {
     border-top: 0.175rem solid #575757;
+    margin-bottom: 5rem;
 }
 
-.list-container > .area-container > .area {
+.list-container > .subtitle-container {
+    width: 1050px;
+    margin: 0.5rem auto;
+}
+
+.list-container > .subtitle-container > .subtitle {
+    font-size: 2.25rem;
+    font-weight: 400;
+}
+
+.list-container > .area {
+    width: 1050px;
+    margin: 0 auto;
+}
+
+.list-container > .area > .item {
     border-top: 0.0625rem solid #D2C4A5;
+}
+
+.list-container > .area > .item > .button {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.list-container > .area > .item > .button > .text {
+    font-size: 1.25rem;
+}
+
+.list-container > .area > .item > .button > .icon {
+    height: 2rem;
+}
+
+.list-container > .area > .item > .hotel-info {
+    max-height: 0;
+    overflow: hidden;
+    transition-duration: 500ms;
+    transition-property: max-height;
+    transition-timing-function: ease;
+}
+
+.list-container > .area > .item > .hotel-info.visible {
+    max-height: 50rem;
 }
