--- a/src/main/resources/static/home/resources/stylesheets/homepage.css
+++ b/src/main/resources/static/home/resources/stylesheets/homepage.css
@@ -23,6 +23,7 @@
 }
 
 .slide ul li {
+    width: 100vw;
     display: inline-block;
 }
 
@@ -45,10 +46,13 @@
 }
 
 .search-container {
-    white-space: nowrap;
-    box-sizing: border-box;
-    padding: 1.5rem 410px;
     background-color: #4a4a4a;
+    height: 100px;
+
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .search-container > .search-form {
@@ -56,6 +60,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    width: 1100px;
 }
 
 .search-container > .search-form input {
