로그인구현

--- a/src/main/resources/templates/member_fragments.html
+++ b/src/main/resources/templates/member_fragments.html
@@ -36,13 +36,13 @@
         <div class="content-subContainer subMenu">
             <ul class="content-container userArea">
                 <li class="item user">
-                    <a href="/user/login" class="link">
-                        <span class="text">로그인</span>
+                    <a href="/logout" class="link">
+                        <span class="text">로그아웃</span>
                     </a>
                 </li>
                 <li class="item user">
-                    <a href="/user/join" class="link">
-                        <span class="text">회원가입</span>
+                    <a href="#" class="link">
+                        <span class="text">마이페이지</span>
                     </a>
                 </li>
             </ul>
