--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,7 +47,7 @@
             </ul>
             <ul class="content-container hotelArea">
                 <li class="item hotel">
-                    <a th:href="@{hotel/info}" class="link">호텔 소개</a>
+                    <a th:href="@{/hotel/info}" class="link">호텔 소개</a>
                 </li>
                 <li class="item hotel">
                     <a href="#" class="link">고객 문의</a>
