--- a/src/main/resources/templates/hotel/info.html
+++ b/src/main/resources/templates/hotel/info.html
@@ -12,6 +12,8 @@
 <body>
 <th:block th:replace="~{fragments.html :: header}"></th:block>
 
+<main id="main" class="content-container-wrapper"></main>
+
 <th:block th:replace="~{fragments.html :: footer}"></th:block>
 </body>
 </html>
