--- a/src/main/resources/static/home/resources/stylesheets/homepage.css
+++ b/src/main/resources/static/home/resources/stylesheets/homepage.css
@@ -27,6 +27,10 @@
     display: inline-block;
 }
 
+.slide ul li img {
+    width: 100vw;
+}
+
 .slide button.prev {
     z-index: 10;
     position: absolute;
