--- a/src/main/resources/static/home/resources/stylesheets/homepage.css
+++ b/src/main/resources/static/home/resources/stylesheets/homepage.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+input:focus {
+    outline : none;
+}
+
 #main {
     align-items: stretch;
     display: flex;
@@ -27,10 +31,6 @@
     display: inline-block;
 }
 
-.slide ul li img {
-    width: 100vw;
-}
-
 .slide button.prev {
     z-index: 10;
     position: absolute;
@@ -47,77 +47,4 @@
     top: 50%;
     transform: translateY(-50%);
     margin-right: 5rem;
-}
-
-.search-container {
-    background-color: #4a4a4a;
-    height: 100px;
-
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.search-container > .search-form {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 1100px;
-}
-
-.search-container > .search-form input {
-    cursor: pointer;
-    border: none;
-    background-color: #4a4a4a;
-    color: #ffffff;
-}
-
-.search-container > .search-form input::placeholder {
-    color: #ffffff;
-}
-
-.search-container > .search-form > .search-button {
-    padding: 0.925rem 1.5rem;
-    background-color: #4a4a4a;
-    color: #ffffff;
-    border-radius: 0.375rem;
-    border: 0.0625rem solid #ffffff;
-}
-
-
-.search-container > .search-form > .search-item {
-    box-sizing: border-box;
-}
-
-.search-container > .search-form > .search-item > .text {
-    color: #ffffff;
-}
-
-
-.search-container > .search-form > .search-item:first-child > .search > .icon {
-    height: 1.25rem;
-    margin-bottom: 0.275rem;
-}
-
-.search-container > .search-form > .search-item:nth-child(4) {
-    box-sizing: border-box;
-    padding-right: 2.5rem;
-}
-
-.search-container > .search-form > .search-item:nth-child(4) > .people {
-    margin: 0 0.25rem;
-    color: #ffffff;
-}
-
-.search-container > .search-form > .search-item:nth-child(4) > .minus > .icon {
-    height: 1.125rem;
-    margin-bottom: 0.25rem;
-}
-
-.search-container > .search-form > .search-item:nth-child(4) > .plus > .icon {
-    height: 1.125rem;
-    margin-bottom: 0.25rem;
 }
