--- a/src/main/resources/static/hotel/resources/stylesheets/info.css
+++ b/src/main/resources/static/hotel/resources/stylesheets/info.css
@@ -1,5 +1,5 @@
 .info-container {
-    margin-top: 5rem;
+    margin: 5rem 0;
 
     display: flex;
     flex-direction: row;
@@ -40,7 +40,7 @@
 
 
 .info-container > .info {
-    width: 900px;
+    width: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
