--- a/src/main/resources/static/resources/stylesheets/common.css
+++ b/src/main/resources/static/resources/stylesheets/common.css
@@ -29,7 +29,7 @@ body > .content-container-wrapper {
 }
 
 body > .content-container-wrapper > .content-container {
-    width: 1100px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -258,7 +258,7 @@ button {
 #findTop > .title-container > .title {
     text-align: center;
     margin: 4rem 0;
-    font-size: 2.75rem;
+    font-size: 2.25rem;
     font-weight: 500;
 }
 
@@ -283,4 +283,68 @@ button {
     color: #4D473C;
     font-size: 1.2rem;
     padding-right: 1.25rem;
+}
+
+.search-container {
+    height: 100px;
+
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    border-bottom: 0.0625rem solid #9c9c9c;
+}
+
+.search-container > .search-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-container > .search-form input {
+    cursor: pointer;
+    border: none;
+}
+
+.search-container > .search-form input::placeholder {
+}
+
+.search-container > .search-form > .search-button {
+    padding: 0.925rem 3rem;
+    border-radius: 0.375rem;
+    border: 0.0625rem solid #ffffff;
+}
+
+.search-container > .search-form > .search-item:nth-child(4) {
+    margin-right: 5rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.search-container > .search-form > .search-item > .adult-container {
+    margin-right: 2rem;
+    text-align: center;
+}
+
+.search-container > .search-form > .search-item > .child-container {
+    text-align: center;
+}
+
+
+.search-container > .search-form > .search-item:first-child > .search > .icon {
+    height: 1.25rem;
+    margin-bottom: 0.275rem;
+}
+
+.search-container > .search-form > .search-item:nth-child(4) .people {
+    margin: 0 0.5rem;
+}
+
+.search-container > .search-form > .search-item:nth-child(4) .icon {
+    height: 1.125rem;
+    margin-bottom: 0.25rem;
 }
