--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -8,25 +8,70 @@
 
 <h1>JOIN PAGE</h1>
 <form name="joinform" action="/user/join" method="post" onsubmit="return false">
-  USERNAME : <input name="user_id" /> <br/>
-  PASSWORD : <input name="password" type="password" /> <br/>
-  <button onclick="isValid()">가입요청</button>
+  <div>
+    <div>
+      <label>아이디</label><span th:text="${user_id}"></span> <br/>
+      <input name="user_id" placeholder="아이디"/> <button onclick="IdCheck() ">중복확인</button> <br/>
+    </div>
+    <div>
+      <label>비밀번호</label><span th:text="${password}"></span> <br/>
+      <input name="password" type="password" placeholder="비밀번호" /> <br/>
+    </div>
+    <div>
+      <label>비밀번호확인</label><span class="pwCheck" th:text="${repassword}"></span> <br/>
+      <input name="repassword" type="password" oninput="PwCheck()" placeholder="비밀번호 확인" /> <br/>
+    </div>
+    <div>
+      <label>이름</label><span th:text="${name}"></span> <br/>
+      <input name="name" placeholder="이름" /> <br/>
+    </div>
+    <div>
+      <label>이메일</label><span th:text="${email}"></span> <br/>
+      <input name="email" placeholder="이메일" /> <br/>
+    </div>
+    <div>
+      <label>우편번호</label><span th:text="${zipcode}"></span> <br/>
+      <input name="zipcode" placeholder="우편번호" /> <br/>
+    </div>
+    <div>
+      <label>주소</label><span th:text="${addr1}"></span> <br/>
+      <input name="addr1" placeholder="주소" /> <br/>
+    </div>
+    <div>
+      <label>상세주소</label> <br/>
+      <input name="addr2" placeholder="상세주소" /> <br/>
+    </div>
+    <div>
+      <button onclick="isValid()">가입요청</button>
+    </div>
+  </div>
 </form>
 
+<!-- axios -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
 <script>
-  const form = document.joinform;
-  const isValid=()=>{
-    if(form.user_id.value.trim()===""){
-      alert("USERNAME은 반드시 입력해야 합니다.");
-      return ;
-    }else if(form.password.value.trim()===""){
-      alert("PASSWORD는 반드시 입력해야 합니다.");
-      return ;
-    }
-    form.submit();
+  const IdCheck = function (){
+      axios.get('/user/ConfirmId/')
+              .then(res=>{
+                console.log(res);
+              })
+              .catch(err=>{
+                console.log(err);
+              });
+  }
+
+  const PwCheck = function(){
+    const pw = document.joinform.password;
+    const re_pw = document.joinform.repassword;
+    if(pw != re_pw)
+      document.querySelector('.pwCheck').textContent('비밀번호가 일치하지 않습니다.')
+    else
+      document.querySelector('.pwCheck').textContent('비밀번호가 일치합니다.');
   }
 
 </script>
 
-
+</body>
 </html>
