--- a/src/main/resources/static/hotel/resources/stylesheets/reservationStep1.css
+++ b/src/main/resources/static/hotel/resources/stylesheets/reservationStep1.css
@@ -5,7 +5,7 @@ input:focus {
 }
 
 #main {
-    align-items: stretch;
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
