--- a/src/main/resources/templates/hotel/reservationStep1.html
+++ b/src/main/resources/templates/hotel/reservationStep1.html
@@ -35,14 +35,14 @@
         <thblock th:replace="~{fragments.html :: search-container}"></thblock>
         <div class="room-container">
             <img th:src="@{/hotel/resources/images/sample.jpg}" alt="">
-            <form action="/hotel/reservationStep2" method="post" class="reservation-form">
+            <form action="/hotel/reservationStep2" method="get" class="reservation-form">
                 <div class="room-info-container">
-                    <span class="room-name">프리미엄 디럭스</span>
+                    <div class="room-name">프리미엄 디럭스</div>
                     <div class="time-container">
                         <div class="in">입실 15:00</div>
                         <div class="out">퇴실 11:00</div>
                     </div>
-                    <span class="capacity">기준 2인, 최대 2인</span>
+                    <div class="capacity">기준 2인, 최대 2인</div>
                 </div>
                 <span class="price">30,000원 / 1박</span>
                 <button class="reservation-button">예약</button>
