--- a/src/main/resources/static/hotel/resources/stylesheets/reservationStep2.css
+++ b/src/main/resources/static/hotel/resources/stylesheets/reservationStep2.css
@@ -43,6 +43,7 @@
 }
 
 .confirmation-payment-container {
+    align-items: stretch;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -51,36 +52,72 @@
 }
 
 .confirmation-payment-container > .confirmation-container {
-
-}
-
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
+    justify-content: space-between;
 }
 
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container > .image-container {
+.confirmation-payment-container > .confirmation-container > .image-container {
     overflow: hidden;
     height: 300px;
 }
 
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container > .image-container img {
-    margin-right: 3.25rem;
+.confirmation-payment-container > .confirmation-container > .image-container img {
     width: 550px;
 }
 
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container > .info {
+.confirmation-payment-container > .confirmation-container > .info {
+    width: 600px;
     border-bottom: #9c9c9c 0.0625rem solid;
 }
 
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container > .info li {
-    margin-bottom: 1rem;
-}
-
-.confirmation-payment-container > .confirmation-container > .hotel-confirmation-container > .info li > .bold {
+.confirmation-payment-container > .confirmation-container > .info .bold {
     display: inline-block;
     width: 10rem;
     font-weight: 500;
+}
+
+.confirmation-payment-container > .confirmation-container > .info li {
+    margin-bottom: 1rem;
+}
+
+.confirmation-payment-container > .payment-container {
+    margin: 3rem 0;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.confirmation-payment-container > .payment-container .subtitle {
+    font-weight: 500;
+    font-size: 1.25rem;
+}
+
+.confirmation-payment-container > .payment-container > .payment-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.confirmation-payment-container > .payment-container > .payment-left > .user-info-container {
+    border: 0.0625rem solid #9c9c9c;
+    margin-top: 1.25rem;
+    margin-bottom: 3rem;
+    width: 800px;
+    height: 200px;
+}
+
+.confirmation-payment-container > .payment-container > .payment-left > .payment-method-container {
+    border: 0.0625rem solid #9c9c9c;
+    margin-top: 1.25rem;
+    width: 800px;
+    height: 200px;
+}
+
+.confirmation-payment-container > .payment-container > .payment-right > .price-container {
+    border: 0.0625rem solid #9c9c9c;
+    margin-top: 1.25rem;
+    width: 300px;
+    height: 400px;
 }
