header 수정 및 reservationStep2 프론트 완료

--- a/src/main/resources/templates/home/homepage.html
+++ b/src/main/resources/templates/home/homepage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/home/resources/stylesheets/homepage.css}">
     <script defer th:src="@{/home/resources/scripts/homepage.js}"></script>
 
-    <!-- jquery -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- datePicker -->
     <link href="/resources/stylesheets/datepicker.min.css" rel="stylesheet" type="text/css" media="all">
