--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -7,6 +7,9 @@
   <!-- join.css    -->
   <link rel="stylesheet" th:href="@{/user/resources/stylesheets/join.css}">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -15,7 +18,7 @@
   <div class="join_wrapper">
     <div>
       <label>아이디</label><span th:text="${user_id}" id="id_msg" class="msg"></span> <br/>
-      <input name="user_id" id="user_id" placeholder="아이디"/> <button type="button" onclick="IdCheck()">중복확인</button> <br/>
+      <input name="user_id" id="user_id" placeholder="아이디"/> <button type="button" class="btn btn-secondary search_addr_btn" onclick="IdCheck()">중복확인</button> <br/>
     </div>
     <div>
       <label>비밀번호</label><span th:text="${password}" id="pw_msg" class="msg"></span> <br/>
@@ -32,18 +35,21 @@
     </div>
     <div>
       <label>이메일</label><span th:text="${email}" id="email_msg" class="msg"></span> <br/>
-      <input name="email" type="email" placeholder="이메일" /> <button type="button" onclick="SendEmail()">인증</button> <br/>
+      <input name="email" type="email" placeholder="이메일" /> <button type="button" class="btn btn-secondary search_addr_btn" onclick="SendEmail()">인증</button> <br/>
+    </div>
+    <div>
+      <label>전화번호</label><span th:text="${phone}" id="phone_msg" class="msg"></span> <br/>
+      <input name="phone" type="phone" placeholder="-제외한 전화번호" /><br/>
     </div>
     <div class="code" style="display:none;">
       <label>인증코드</label><span id="code_msg" class="msg"></span> <br/>
-      <input name="emailCode" placeholder="인증코드입력"> <button name="email_btn" type="button" onclick="ConfirmEmail()">확인</button> <br/>
+      <input name="emailCode" placeholder="인증코드입력"> <button name="email_btn" class="btn btn-secondary search_addr_btn" type="button" onclick="ConfirmEmail()">확인</button> <br/>
     </div>
     <div>
       <label>우편번호</label><span th:text="${zipcode}" class="msg"></span> <br/>
-      <input name="zipcode" id="zipcode" placeholder="우편번호" /> <button name="address_btn" onclick="javascript:AddressSearch()">우편번호 찾기</button> <br/>
+      <input name="zipcode" id="zipcode" placeholder="우편번호" /> <a href="javascript:AddressSearch()" class="btn btn-secondary search_addr_btn">우편번호 찾기</a> <br/>
     </div>
-    <div>6
-
+    <div>
       <label>주소</label><span th:text="${addr1}" class="msg"></span> <br/>
       <input name="addr1" id="addr1" placeholder="주소" /> <br/>
     </div>
@@ -52,7 +58,7 @@
       <input name="addr2" id="addr2" placeholder="상세주소" /> <br/>
     </div>
     <div>
-      <button>가입요청</button>
+      <button class="btn btn-secondary search_addr_btn">가입요청</button>
     </div>
   </div>
 </form>
@@ -138,7 +144,10 @@
 
   const SendEmail = function(){
     const email = document.joinform.email.value;
+    const email_msg = document.querySelector('#email_msg');
     if(EmailCheck()){
+      email_msg.textContent = "이메일로 인증코드가 전송되었습니다.";
+      email_msg.style.color = 'green';
       axios.get('/user/sendEmail/' + email)
               .then(res => {
                 console.log(res);
