--- a/src/main/resources/static/user/resources/stylesheets/login.css
+++ b/src/main/resources/static/user/resources/stylesheets/login.css
@@ -1,3 +1,7 @@
+.content-container > .title-container > .title{
+    font-size: 2.25rem;
+    margin-top: 50px;
+}
 a{
     color: inherit;
     text-decoration: none;
